--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "5.6.1",
-    "hardhat": "^2.9.0",
+    "hardhat": "^2.12.0",
     "hardhat-deploy": "^0.10.5",
     "hardhat-gas-reporter": "^1.0.7",
     "prettier": "^2.5.1",
@@ -32,5 +32,10 @@
     "lint": "solhint 'contracts/*.sol'",
     "lint:fix": "solhint 'contracts/**/*.sol' --fix",
     "format": "prettier --write ."
-  }
+  },
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/Benrockiee/SpideyNft.git",
+  "author": "Benrockiee <benrockiee@gmail.com>",
+  "license": "MIT"
 }
